// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculator calculateDesiredResourceForInterval 1`] = `
Object {
  "components": Array [
    Object {
      "baselineCpu": 0,
      "baselineMemory": 0,
      "desiredCpu": 1500,
      "desiredMemory": 3000,
      "desiredReplica": 15,
      "limitCpu": 100,
      "limitMemory": 200,
      "maxReplica": 200,
      "minReplica": 2,
      "name": "foo",
      "needCpuReplica": 10,
      "requestToCpu": 0,
      "requestToMemory": 0,
      "scalingIntervals": 0,
      "scalingThresholdCpu": 70,
    },
  ],
  "desiredCpu": 1500,
  "desiredMemory": 3000,
  "desiredPods": 15,
  "requests": 1,
  "time": 1,
}
`;

exports[`calculator calculateNodesDesiredForInterval 1`] = `
Object {
  "desiredCpu": 10000,
  "desiredMemory": 200000,
  "desiredNodes": 1000,
  "desiredNodesByCpu": 100,
  "desiredNodesByMemory": 1000,
  "desiredNodesByPods": 10,
  "desiredPods": 1000,
  "nodes": Object {
    "availableCpu": 100,
    "availableMemory": 200,
    "cost": 0,
    "maxNodes": 1000,
    "maxPods": 100,
    "minNodes": 30,
    "scalingIntervals": 0,
  },
  "requests": 1,
  "time": 1,
}
`;

exports[`calculator calculateNodesNeededForInterval 1`] = `
Object {
  "needCpu": 10000,
  "needMemory": 200000,
  "needNodesByCpu": 100,
  "needNodesByMemory": 1000,
  "needNodesByPods": 10,
  "needPods": 1000,
  "nodes": Object {
    "availableCpu": 100,
    "availableMemory": 200,
    "maxPods": 100,
  },
  "requests": 1,
  "time": 1,
}
`;

exports[`calculator calculatePendingPods 1`] = `
Array [
  Object {
    "components": Array [
      Object {
        "desiredReplica": 3,
        "minReplica": 1,
        "pendingReplica": 1,
        "scalingIntervals": 2,
      },
    ],
    "requests": 1,
    "time": 1,
  },
  Object {
    "components": Array [
      Object {
        "desiredReplica": 3,
        "minReplica": 1,
        "pendingReplica": 1,
        "scalingIntervals": 2,
      },
    ],
    "requests": 1,
    "time": 1,
  },
  Object {
    "components": Array [
      Object {
        "desiredReplica": 3,
        "minReplica": 1,
        "pendingReplica": 3,
        "scalingIntervals": 2,
      },
    ],
    "requests": 1,
    "time": 1,
  },
  Object {
    "components": Array [
      Object {
        "desiredReplica": 3,
        "minReplica": 1,
        "pendingReplica": 3,
        "scalingIntervals": 2,
      },
    ],
    "requests": 1,
    "time": 1,
  },
  Object {
    "components": Array [
      Object {
        "desiredReplica": 3,
        "minReplica": 1,
        "pendingReplica": 3,
        "scalingIntervals": 2,
      },
    ],
    "requests": 1,
    "time": 1,
  },
  Object {
    "components": Array [
      Object {
        "desiredReplica": 10,
        "minReplica": 1,
        "pendingReplica": 3,
        "scalingIntervals": 2,
      },
    ],
    "requests": 1,
    "time": 1,
  },
  Object {
    "components": Array [
      Object {
        "desiredReplica": 4,
        "minReplica": 1,
        "pendingReplica": 10,
        "scalingIntervals": 2,
      },
    ],
    "requests": 1,
    "time": 1,
  },
  Object {
    "components": Array [
      Object {
        "desiredReplica": 3,
        "minReplica": 1,
        "pendingReplica": 4,
        "scalingIntervals": 2,
      },
    ],
    "requests": 1,
    "time": 1,
  },
  Object {
    "components": Array [
      Object {
        "desiredReplica": 3,
        "minReplica": 1,
        "pendingReplica": 3,
        "scalingIntervals": 2,
      },
    ],
    "requests": 1,
    "time": 1,
  },
]
`;

exports[`calculator calculateReadyNodes 1`] = `
Array [
  Object {
    "desiredNodes": 10,
    "nodes": Object {
      "scalingIntervals": 3,
    },
    "readyNodes": undefined,
    "requests": 1,
    "time": 1,
  },
  Object {
    "desiredNodes": 10,
    "nodes": Object {
      "scalingIntervals": 3,
    },
    "readyNodes": undefined,
    "requests": 1,
    "time": 1,
  },
  Object {
    "desiredNodes": 10,
    "nodes": Object {
      "scalingIntervals": 3,
    },
    "readyNodes": undefined,
    "requests": 1,
    "time": 1,
  },
  Object {
    "desiredNodes": 5,
    "nodes": Object {
      "scalingIntervals": 3,
    },
    "readyNodes": undefined,
    "requests": 1,
    "time": 1,
  },
  Object {
    "desiredNodes": 10,
    "nodes": Object {
      "scalingIntervals": 3,
    },
    "readyNodes": 10,
    "requests": 1,
    "time": 1,
  },
  Object {
    "desiredNodes": 10,
    "nodes": Object {
      "scalingIntervals": 3,
    },
    "readyNodes": 5,
    "requests": 1,
    "time": 1,
  },
  Object {
    "desiredNodes": 10,
    "nodes": Object {
      "scalingIntervals": 3,
    },
    "readyNodes": 10,
    "requests": 1,
    "time": 1,
  },
]
`;

exports[`calculator calculateReplicasNeededForInterval 1`] = `
Object {
  "components": Array [
    Object {
      "baselineCpu": 4,
      "baselineMemory": 500,
      "limitCpu": 40,
      "limitMemory": 200,
      "maxReplica": 0,
      "minReplica": 1,
      "name": "foo",
      "needCpuForRequests": 30,
      "needCpuReplica": 1,
      "needMemoryForRequests": 20,
      "needMemoryReplica": -0,
      "needReplica": 1,
      "requestToCpu": 0,
      "requestToMemory": 0,
      "scalingIntervals": 0,
      "scalingThresholdCpu": 0,
    },
  ],
  "needPods": 1,
  "requests": 1,
  "time": 1,
}
`;

exports[`calculator calculateResourceNeededForInterval 1`] = `
Object {
  "components": Array [
    Object {
      "baselineCpu": 2,
      "baselineMemory": 10,
      "limitCpu": 0,
      "limitMemory": 0,
      "maxReplica": 0,
      "minReplica": 0,
      "name": "foo",
      "needCpu": 204,
      "needCpuForRequests": 200,
      "needMemory": 35,
      "needMemoryForRequests": 15,
      "needReplica": 2,
      "requestToCpu": 0,
      "requestToMemory": 0,
      "scalingIntervals": 0,
      "scalingThresholdCpu": 0,
    },
  ],
  "needCpu": 204,
  "needMemory": 35,
  "requests": 1,
  "time": 1,
}
`;

exports[`calculator calculateResourceNeededForRequestsInterval 1`] = `
Object {
  "components": Array [
    Object {
      "baselineCpu": 0,
      "baselineMemory": 0,
      "limitCpu": 0,
      "limitMemory": 0,
      "maxReplica": 0,
      "minReplica": 0,
      "name": "foo",
      "needCpuForRequests": 300,
      "needMemoryForRequests": 400,
      "requestToCpu": 3,
      "requestToMemory": 4,
      "scalingIntervals": 0,
      "scalingThresholdCpu": 0,
    },
  ],
  "requests": 100,
  "time": 1,
}
`;
